# sandbox

./: .env  Dockerfile  demo.txt  pyproject.toml  requirements.txt  supervisord.conf
.devops/: Dockerfile  docker-compose.yml
app/: main.py
app/core/: config.py  middleware.py
app/interfaces/: service_dependencies.py
app/interfaces/endpoints/: file.py  routes.py  shell.py  supervisor.py
app/interfaces/errors/: exception_handlers.py  exceptions.py
app/interfaces/schemas/: base.py  file.py  shell.py
app/models/: file.py  shell.py  supervisor.py
app/services/: file.py  shell.py  supervisor.py
